<resources>
    <string name="app_name">TenPercent</string>
    <string name="puntos">Puntos</string>
    <string name="prueba">Jugar</string>
    <string name="presion_larga">Presión Larga</string>
    <string name="agitacion">Agitacion</string>
    <string name="simple_tap">Tap</string>
    <string name="doble_tap">Doble Tap</string>
    <string name="puntos_obtenidos">Puntos obtenidos</string>
    <string name="puntos_obtenidos2">Puntos obtenidos:</string>
    <string name="puntaje_maximo">\nPuntaje Máximo:</string>
    <string name="Jugar">Jugar</string>
    <string name="Detener">Detener</string>
    <string name="deslizar_abajo">Desliza Abajo</string>
    <string name="deslizar_arriba">Desliza Arriba</string>
    <string name="designed_by">Diseñado por Matias Diaz</string>
    <string name="sponsored_by">Patrocinado por LircayHub</string>
    <string name="copyright">© Copyright 2023–2023</string>
    <string name="puntaje">Puntaje:</string>
    <string name="vidas">Vidas</string>
    <string name="vidas2">Vidas:</string>
    <string name="vidas_legendario">MODO LEGENDARIO</string>
    <string name="modo_carrera">Modo Carrera</string>
    <string name="modo_legendario">Modo Legendario</string>
    <string name="msj_puntaje_carrera">Puntaje más alto (Modo Carrera): </string>
    <string name="msj_puntaje_legendario">Puntaje más alto (Modo Legendario): </string>
    <string name="title_activity_settings">Records</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>